# hortpro-checker

./: CLAUDE.md  Cargo.toml  flake.nix  shell.nix
docs/superpowers/plans/: 2026-04-20-hortpro-checker.md
docs/superpowers/specs/: 2026-04-20-hortpro-checker-design.md
nix/: package.nix
src/: api.rs  cli.rs  main.rs  notify.rs  state.rs
